examples/errors/leftright-correct.tex
\documentclass{article}
\usepackage{amsmath}
\begin{document}
\[
\left( \frac{1}{2}+3 \right)^{2}
\]
\end{document}
